--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "getintodevops-hellonode",
+  "name": "getintodevops-helloIsrael",
   "version": "1.0.0",
   "description": "A Hello World HTTP server",
   "main": "main.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/getintodevops/hellonode/"
+    "url": "https://github.com/nimrods8/getIntoDevOps/"
   },
   "keywords": [
     "node",
